bundle/tests/scorecard/kuttl/network-policy-multiple-apps/00-multiple-network-policies.yaml
apiVersion: apps.openliberty.io/v1beta2
kind: OpenLibertyApplication
metadata:
  name: network-policy-frontend-lib
spec:
  applicationName: network-policy-test
  applicationImage: icr.io/appcafe/open-liberty:full-java8-openj9-ubi
  expose: true
  service:
    port: 9080
    ports:
      - port: 9443
        protocol: TCP
---
apiVersion: apps.openliberty.io/v1beta2
kind: OpenLibertyApplication
metadata:
  name: network-policy-backend-lib
spec:
  applicationName: network-policy-test
  applicationImage: icr.io/appcafe/open-liberty:full-java8-openj9-ubi
  service:
    port: 9080
    ports:
      - port: 9443
        protocol: TCP
