bundle/tests/scorecard/kuttl/network-policy-multiple-apps/00-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 60
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-frontend-lib
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              policy-group.network.openshift.io/ingress: ""
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: network-policy-test
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: monitoring
      ports:
        - port: 9080
          protocol: TCP
        - port: 9443
          protocol: TCP
  podSelector:
    matchLabels:
      apps.openliberty.io/name: network-policy-frontend-lib
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-backend-lib
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: network-policy-test
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: monitoring
      ports:
        - port: 9080
          protocol: TCP
        - port: 9443
          protocol: TCP
  podSelector:
    matchLabels:
      apps.openliberty.io/name: network-policy-backend-lib
  policyTypes:
    - Ingress
